tests/kulezi_tests/bad/undeclared_method_type2.lat
class C {
    int foo(D x) {}
}


int main() {
}